--- a/style.css
+++ b/style.css
@@ -54,3 +54,10 @@ footer {
 .review {
   font-family: "Georgia";
 }
+
+@media screen and (max-width: 500px) {
+  #header {
+    font-size: 20px;
+  }
+
+}
