--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
   font-size: 30px;
   margin: auto;
   padding: 20px;
-  padding-top: 60px;
+  padding-bottom: 60px;
   border: solid black 1px;
   background-image: url(images/background.jpg);
-  background-position: 0px -10000px;
+  background-size: 300px 150px;
   text-transform: uppercase;
   color: white;
   text-shadow: 2px 2px black;
@@ -19,6 +19,22 @@ body {
   width: 80%;
   background-color: #93DDFD;
 }
+
+#review_tiles img {
+  height: 300px;
+  width: 200px;
+  border-radius: 30px;
+}
+
+#review_tiles img:hover {
+  opacity: 0.5;
+
+}
+
+a:hover {
+  opacity: 0.5;
+}
+
 
 a:link {
   color: black;
@@ -59,5 +75,22 @@ footer {
   #header {
     font-size: 20px;
   }
+
+}
+
+#image {
+  border: solid black 3px;
+  float: left;
+  width: 20%;
+  margin-bottom: 25px;
+  min-height: 200px;
+}
+
+#details {
+  display: block;
+  float:right;
+  width: 75%;
+  margin-bottom: 175px;
+  margin-top: -20px;
 
 }
